Fix: box-shadow not working on safari

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ label {
 }
 
 .grid-lines {
-	margin: 1rem 0 0.5rem;
+	margin: 1.5rem 0 0.5rem;
 }
 
 #grid-lines-input {
@@ -124,6 +124,7 @@ input[type='color'] {
 
 button {
 	box-shadow: 0px 4px 0px #297D2E;
+	-webkit-box-shadow: 0px 4px 0px #297D2E;
 }
 
 .buttons > button:not(:last-child) {
